wellesleynet/roles/k8s/files/filebrowser.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: filebrowser
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  serviceName: "filebrowser"
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
      - image: filebrowser/filebrowser:v2.0.16
        imagePullPolicy: Always
        name: filebrowser
        ports:
        - containerPort: 80
        volumeMounts:
        - name: filebrowser-config
          mountPath: /database.db
          subPath: database.db
        - name: filebrowser-config
          mountPath: /.filebrowser.json
          subPath: .filebrowser.json
        - name: filebrowser-docs
          mountPath: /srv/docs
      volumes:
      - name: filebrowser-config
        persistentVolumeClaim:
          claimName: filebrowser-config
      - name: filebrowser-docs
        persistentVolumeClaim:
          claimName: filebrowser-docs
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: filebrowser
spec:
  selector:
    app: filebrowser
  ports:
  - name: filebrowser
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: filebrowser
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
  - host: files.kiski.co
    http:
      paths:
      - backend:
          serviceName: filebrowser
          servicePort: 80
  tls:
  - hosts:
    - files.kiski.co
    secretName: kiskico-wildcard
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: filebrowser-oauth2
  namespace: default
spec:
  tls:
  - hosts:
    - files.kiski.co
    secretName: kiskico-wildcard
  rules:
  - host: files.kiski.co
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: 4180
